// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: match > branch unification > mismatched branch types: match 1 | 1 -> 2 | 3 -> "hello" 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ Num",
      "String ~~ Num",
      "Num ~~ ?2",
      "String ~~ ?2",
    ],
    "term": "(λ(x: Num) -> match x | 1 -> 2 | 3 -> "hello" : Π(x: Num) ->
  (?2 :: (?1 :: Type)))",
    "type": "Π(x: Num) -> (closure: (?2 :: (?1 :: Type)) -| Γ: x)",
  },
}
`;

exports[`inference: match > match { x: 1 } | { x: a } -> a 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ ?1",
      "Schema [ x: ?3 | ?4 ] ~~ Schema [ x: Num ]",
      "?3 ~~ ?3",
      "?3 ~~ ?6",
    ],
    "term": "match Struct [ x: 1 ] | Struct [ x: a | $row_4 ] -> a",
    "type": "?6",
  },
}
`;

exports[`inference: match > match 1 | 1 -> 2 1`] = `
{
  "displays": {
    "constraints": [
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?2",
    ],
    "term": "match 1 | 1 -> 2",
    "type": "?2",
  },
}
`;

exports[`inference: match > struct patterns > nested recursive struct patterns with application 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Schema [ foo: Schema [ y: ?2 | ?3 ], bar: ?5 | ?6 ] ~~ Num",
      "?5 ~~ Π(x: ?7) -> (closure: (?8 :: Type) -| Γ: x; $row_6; f; $row_3; y; x)",
      "?2 ~~ ?7",
      "Schema [ z: Schema [ w: ?10 | ?11 ] | ?12 ] ~~ Num",
      "?8 ~~ ?8",
      "?10 ~~ ?8",
      "?8 ~~ ?14",
      "?10 ~~ ?14",
    ],
    "term": "(λ(x: Num) ->
  match x
    | Struct [ foo: Struct [ y: y | $row_3 ], bar: f | $row_6 ] -> f y
    | Struct [ z: Struct [ w: w | $row_11 ] | $row_12 ] -> w : Π(x: Num) ->
  (?14 :: (?13 :: Type)))",
    "type": "Π(x: Num) -> (closure: (?14 :: (?13 :: Type)) -| Γ: x)",
  },
}
`;

exports[`inference: match > struct patterns > struct pattern with literal fields 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Schema [ x: Num, y: Num | ?1 ] ~~ Num",
      "Schema [ z: Num, w: Num | ?2 ] ~~ Num",
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?4",
      "Num ~~ ?4",
    ],
    "term": "(λ(x: Num) ->
  match x
    | Struct [ x: 1, y: 2 | $row_1 ] -> 11
    | Struct [ z: 3, w: 4 | $row_2 ] -> 22 : Π(x: Num) -> (?4 :: (?3 :: Type)))",
    "type": "Π(x: Num) -> (closure: (?4 :: (?3 :: Type)) -| Γ: x)",
  },
}
`;

exports[`inference: match > struct patterns > struct pattern with row polymorphism 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Schema [ x: Num, y: Num | ?1 ] ~~ Num",
      "Schema [ z: Num, w: Num | ?2 ] ~~ Num",
      "?1 ~~ ?1",
      "Num ~~ ?1",
      "?1 ~~ ?4",
      "Num ~~ ?4",
    ],
    "term": "(λ(x: Num) ->
  match x
    | Struct [ x: 1, y: 2 | r ] -> r
    | Struct [ z: 3, w: 4 | r ] -> x : Π(x: Num) -> (?4 :: (?3 :: Type)))",
    "type": "Π(x: Num) -> (closure: (?4 :: (?3 :: Type)) -| Γ: x)",
  },
}
`;

exports[`inference: match > struct patterns > variable binding in struct patterns 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Schema [ x: ?2 | ?3 ] ~~ Num",
      "Schema [ z: ?5 | ?6 ] ~~ Num",
      "?2 ~~ ?2",
      "?5 ~~ ?2",
      "?2 ~~ ?8",
      "?5 ~~ ?8",
    ],
    "term": "(λ(x: Num) ->
  match x
    | Struct [ x: y | $row_3 ] -> y
    | Struct [ z: w | $row_6 ] -> w : Π(x: Num) -> (?8 :: (?7 :: Type)))",
    "type": "Π(x: Num) -> (closure: (?8 :: (?7 :: Type)) -| Γ: x)",
  },
}
`;

exports[`inference: match > type patterns > match on type constructors: Num, String 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "?2 ~~ Num",
      "?4 ~~ Num",
      "Num ~~ Num",
      "String ~~ Num",
      "Num ~~ ?6",
      "String ~~ ?6",
    ],
    "term": "(λ(x: Num) -> match x | Num -> 1 | String -> "hello" : Π(x: Num) ->
  (?6 :: (?5 :: Type)))",
    "type": "Π(x: Num) -> (closure: (?6 :: (?5 :: Type)) -| Γ: x)",
  },
}
`;

exports[`inference: match > variable patterns > match x | y -> 2 | z -> 4 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "?2 ~~ Num",
      "?4 ~~ Num",
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?6",
      "Num ~~ ?6",
    ],
    "term": "(λ(x: Num) -> match x | y -> 2 | z -> 4 : Π(x: Num) -> (?6 :: (?5 :: Type)))",
    "type": "Π(x: Num) -> (closure: (?6 :: (?5 :: Type)) -| Γ: x)",
  },
}
`;

exports[`inference: match > variant patterns > match on variant tags: #nil, #cons 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Variant [ nil: ?2 | ?3 ] ~~ Num",
      "Variant [ cons: Schema [ 0: ?5, 1: ?7 | ?8 ] | ?9 ] ~~ Num",
      "Num ~~ Num",
      "Num ~~ Num",
      "Num ~~ ?11",
      "Num ~~ ?11",
    ],
    "term": "(λ(x: Num) ->
  match x
    | Variant [ nil: a | $row_3 ] -> 0
    | Variant [ cons: Struct [ 0: el, 1: rest | $row_8 ] | $row_9 ] ->
        1 : Π(x: Num) -> (?11 :: (?10 :: Type)))",
    "type": "Π(x: Num) -> (closure: (?11 :: (?10 :: Type)) -| Γ: x)",
  },
}
`;
